Fix styling issue on smaller screens

--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -5,8 +5,7 @@
   width: 100%;
   flex-direction: column;
   gap: 50px;
-
-  padding-top: 50px;
+  justify-content: center;
 }
 
 .gameBoxes {
@@ -14,7 +13,6 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  padding-top: 50px;
   gap: 30px;
 }
 
