--- a/src/components/Tutorial/Tutorial.module.css
+++ b/src/components/Tutorial/Tutorial.module.css
@@ -1,12 +1,16 @@
 .tutorial {
-  padding: 1.5rem;
+  padding: 1rem;
   margin-top: auto; /* Pushes the element to the bottom */
   display: flex;
   flex-direction: column;
 }
 
+ul {
+  padding-left: 1rem;
+}
+
 .tutorial h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 600;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
